refactor(pathfinder): pathFinder가 line을 의존하도록 변경