@@ -7,7 +7,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static nextstep.subway.fixture.LineFixture.*;
@@ -45,17 +44,22 @@ public class PathFinderTest {
         교대역_남부터미널역_구간 = new Section(삼호선, 교대역, 남부터미널역, 4);
         남부터미널역_양재역_구간 = new Section(삼호선, 남부터미널역, 양재역, 2);
         양재역_강남역_구간 = new Section(신분당선, 양재역, 강남역, 5);
+        이호선.addSection(강남역_교대역_구간);
+        삼호선.addSection(교대역_남부터미널역_구간);
+        삼호선.addSection(남부터미널역_양재역_구간);
+        신분당선.addSection(양재역_강남역_구간);
+
     }
 
     @Test
     @DisplayName("구간들을 넣고 출발역과 도착역을 입력하면 최단경로의 역목록 반환")
     void findPathStations() {
-        // given 구간들을 입력
-        List<Section> sections = Arrays.asList(강남역_교대역_구간, 교대역_남부터미널역_구간, 남부터미널역_양재역_구간, 양재역_강남역_구간);
-        PathFinder pathFinder = new PathFinder(sections);
+        // given 노선 전체가 제공된다.
+        List<Line> 전체_라인 = List.of(이호선, 삼호선, 신분당선);
+        PathFinder pathFinder = new PathFinder(전체_라인);
 
         // when 출발역과 도착역을 넣고 경로를 계산하면
-        pathFinder.setSourceAndTarget(교대역, 양재역);
+        pathFinder.calculatePath(교대역, 양재역);
 
         // then 최단경로의 역 목록이 반환된다.
         assertThat(pathFinder.getPathStations()).containsExactly(교대역, 남부터미널역, 양재역);
